<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.detail.tvshow.TvShowDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_poster"
                android:layout_width="140dp"
                android:layout_height="210dp"
                android:layout_marginStart="@dimen/margin_edge"
                android:layout_marginTop="8dp"
                android:src="@drawable/poster_alita"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_tv_show_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="sans-serif"
                android:maxLines="3"
                android:ellipsize="end"
                android:text="@string/example_movie_name"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="?android:textColorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_poster"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/layout_cert_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_poster"
                app:layout_constraintTop_toBottomOf="@+id/tv_tv_show_name">

                <TextView
                    android:id="@+id/tv_tv_show_certification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="#AA000000"
                    android:padding="4dp"
                    android:text="@string/example_certification"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/example_year" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/pb_user_score"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:indeterminate="false"
                android:progressDrawable="@drawable/circular_progress_bar"
                android:background="@drawable/circle_shape"
                style="?android:attr/progressBarStyleHorizontal"
                android:progress="56"
                android:max="100"
                app:layout_constraintStart_toEndOf="@+id/img_poster"
                app:layout_constraintTop_toBottomOf="@+id/tv_category_duration" />

            <TextView
                android:id="@+id/tv_user_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_user_score"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/pb_user_score"
                app:layout_constraintEnd_toEndOf="@+id/pb_user_score"
                app:layout_constraintStart_toStartOf="@+id/pb_user_score"
                app:layout_constraintTop_toTopOf="@+id/pb_user_score" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_score"
                android:textStyle="bold"
                android:layout_margin="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/pb_user_score"
                app:layout_constraintStart_toEndOf="@+id/pb_user_score"
                app:layout_constraintTop_toTopOf="@+id/pb_user_score" />

            <TextView
                android:id="@+id/tv_category_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/example_category_duration"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_poster"
                app:layout_constraintTop_toBottomOf="@+id/layout_cert_date" />

            <TextView
                android:id="@+id/tv_label_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_edge"
                android:fontFamily="sans-serif"
                android:text="@string/synopsis"
                android:textColor="?android:textColorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_poster" />

            <View
                android:id="@+id/line_synopsis"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="@dimen/margin_edge"
                android:layout_marginEnd="@dimen/margin_edge"
                android:background="#000000"
                app:layout_constraintTop_toBottomOf="@id/tv_label_synopsis" />

            <TextView
                android:id="@+id/tv_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="@dimen/margin_edge"
                android:layout_marginEnd="@dimen/margin_edge"
                android:layout_marginBottom="@dimen/margin_edge"
                android:text="@string/example_synopsis"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/line_synopsis" />

            <TextView
                android:id="@+id/tv_label_crew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_edge"
                android:fontFamily="sans-serif"
                android:text="@string/the_crew"
                android:textColor="?android:textColorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_synopsis" />

            <View
                android:id="@+id/line_crew"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="@dimen/margin_edge"
                android:layout_marginEnd="@dimen/margin_edge"
                android:background="#000000"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_crew" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rec_crews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tools:listitem="@layout/item_crews"
                app:layout_constraintTop_toBottomOf="@+id/line_crew" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>