...
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/highlight_movies_desc" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rec_highlight_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="match_parent"
...
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discover_movies_desc" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rec_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_edge"
            android:layout_marginBottom="16dp"
            tools:listitem="@layout/item_movies" />

...
