<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_movies">

    <fragment
        android:id="@+id/navigation_movies"
        android:name="id.dwichan.moviedicts.ui.main.movies.MoviesFragment"
        android:label="@string/navigation_movie"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/navigation_television"
        android:name="id.dwichan.moviedicts.ui.main.television.TelevisionShowFragment"
        android:label="@string/navigation_television_show"
        tools:layout="@layout/fragment_television_show" />

    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="id.dwichan.moviedicts.ui.main.bookmark.BookmarkFragment"
        android:label="@string/navigation_bookmarks"
        tools:layout="@layout/fragment_bookmark" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="id.dwichan.moviedicts.ui.main.about.AboutFragment"
        android:label="@string/navigation_about"
        tools:layout="@layout/fragment_about" />

</navigation>